--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/rent_ecom2
-spring.datasource.username=root
-spring.datasource.password=Welcome@18081994
+spring.datasource.url=jdbc:mysql://localhost:3306/rentallv1
+spring.datasource.username=admin
+spring.datasource.password=admin
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl.auto=update
+spring.jpa.hibernate.ddl.auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 security.basic.enabled=false
 
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
